[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/MainMenu/LevelMockup.gd" type="Script" id=1]
[ext_resource path="res://art/MainMenu/background_plain2.png" type="Texture" id=2]
[ext_resource path="res://art/MainMenu/Ring.png" type="Texture" id=3]
[ext_resource path="res://scenes/MainMenu/UserPannel.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/MainMenu/playerbutton.tscn" type="PackedScene" id=5]
[ext_resource path="res://art/sounds/Bg_dungeon_boss.ogg" type="AudioStream" id=6]
[ext_resource path="res://scenes/Loader/Loader.tscn" type="PackedScene" id=7]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0.266865, 0.266865, 0.266865, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
max_value = 3.0
_data = [ Vector2( 0.00839677, 2.82978 ), 0.0, 0.0, 0, 0, Vector2( 0.991603, 1.14018 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
spread = 10.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
angular_velocity = 500.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 100.0
scale_random = 0.2
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[node name="LevelMockup" type="Node"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -187.5
margin_top = -667.0
margin_right = 188.5

[node name="TextureRect2" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -376.443
margin_top = -1334.0
margin_right = 1123.56
margin_bottom = 1334.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -188.138
margin_top = -131.469
margin_right = 561.862
margin_bottom = 130.531
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Particles2D" type="Particles2D" parent="Control"]
visible = false
position = Vector2( 211.808, 566.687 )
rotation = -1.5708
amount = 150
speed_scale = 0.5
process_material = SubResource( 5 )

[node name="Particles2D2" type="Particles2D" parent="Control"]
visible = false
position = Vector2( 165.058, 566.687 )
rotation = -1.5708
amount = 150
speed_scale = 0.5
process_material = SubResource( 5 )

[node name="TopPannel" parent="." instance=ExtResource( 4 )]
margin_left = 2.37268
margin_top = 0.183368
margin_right = 2.37268
margin_bottom = 114.183

[node name="MiddelPannel" parent="." instance=ExtResource( 5 )]
margin_top = -237.04
margin_bottom = 148.96

[node name="BgSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "BackGround"

[node name="Loader" parent="." instance=ExtResource( 7 )]
visible = false

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
